--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>aoc-01-trebuchet</module>
+        <module>aoc-02-cubeconundrum</module>
     </modules>
 
     <properties>
