--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>aoc-01-trebuchet</module>
         <module>aoc-02-cubeconundrum</module>
         <module>aoc-03-gearratios</module>
+        <module>aoc-04-scratchcards</module>
     </modules>
 
     <properties>
