--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>aoc-03-gearratios</module>
         <module>aoc-04-scratchcards</module>
         <module>aoc-05-ifyougiveaseedafertilizer</module>
+        <module>aoc-06-waitforit</module>
     </modules>
 
     <properties>
