--- a/aoc-07-camelcards/pom.xml
+++ b/aoc-07-camelcards/pom.xml
@@ -10,12 +10,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>aoc-06-waitforit</artifactId>
+    <artifactId>aoc-07-camelcards</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
