--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>aoc-05-ifyougiveaseedafertilizer</module>
         <module>aoc-06-waitforit</module>
         <module>aoc-07-camelcards</module>
+        <module>aoc-08-hauntedwasteland</module>
     </modules>
 
     <properties>
