--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>aoc-07-camelcards</module>
         <module>aoc-08-hauntedwasteland</module>
         <module>aoc-09-miragemaintenance</module>
+        <module>aoc-10-pipemaze</module>
     </modules>
 
     <properties>
