--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.15.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>32.1.3-jre</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
