--- a/aoc-11-cosmicexpansion/pom.xml
+++ b/aoc-11-cosmicexpansion/pom.xml
@@ -23,9 +23,7 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.3</version>
-            <scope>test</scope>
+            <artifactId>junit-jupiter</artifactId>
         </dependency>
     </dependencies>
 
