--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>aoc-13-pointofincidence</module>
         <module>aoc-14-parabolicreflectordish</module>
         <module>aoc-15-lenslibrary</module>
+        <module>aoc-16-thefloorwillbelava</module>
     </modules>
 
     <properties>
