--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>aoc-14-parabolicreflectordish</module>
         <module>aoc-15-lenslibrary</module>
         <module>aoc-16-thefloorwillbelava</module>
+        <module>aoc-17-clumsycrucible</module>
     </modules>
 
     <properties>
